@@ -943,9 +943,9 @@ def add_tool_list(toollist, toolbaritems):
 Mixin.setPlugin('mainframe', 'add_tool_list', add_tool_list)
 
 def afterinit(win):
-    import FindReplaceDialog
+    import FindReplace
 
-    win.finder = FindReplaceDialog.Finder()
+    win.finder = FindReplace.Finder()
 Mixin.setPlugin('mainframe', 'afterinit', afterinit)
 
 def on_set_focus(win, event):
@@ -3037,7 +3037,9 @@ Mixin.setPlugin('mainframe', 'add_menu', add_mainframe_menu)
 def OnHelpIndex(win, event):
     import webbrowser
 
-    webbrowser.open('file:///'+common.get_app_filename(win, 'doc/index.htm'), 1)
+    o = webbrowser.get()
+    o.args = ["%s"]
+    o.open('file:///'+common.get_app_filename(win, 'doc/index.htm'), 1)
 Mixin.setMixin('mainframe', 'OnHelpIndex', OnHelpIndex)
 
 def OnHelpAbout(win, event):
