@@ -1,135 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resource>
-  <object class="wxDialog" name="FindReplaceDialog">
-    <title>查找并替换...</title>
-    <centered>1</centered>
-    <size>410,222</size>
-    <style>wxDEFAULT_DIALOG_STYLE</style>
-    <object class="wxComboBox" name="ID_FINDTEXT">
-      <content/>
-      <pos>80,8</pos>
-      <size>200,-1</size>
-    </object>
-    <object class="wxComboBox" name="ID_REPLACETEXT">
-      <content/>
-      <pos>80,32</pos>
-      <size>200,-1</size>
-    </object>
-    <object class="wxButton" name="ID_FIND">
-      <label>查找</label>
-      <default>1</default>
-      <pos>320, 7</pos>
-      <size>80, -1</size>
-    </object>
-    <object class="wxButton" name="ID_REPLACE">
-      <label>替换</label>
-      <pos>320, 32</pos>
-      <size>80, -1</size>
-    </object>
-    <object class="wxButton" name="ID_REPLACEALL">
-      <label>替换全部</label>
-      <pos>320, 57</pos>
-      <size>80, -1</size>
-    </object>
-    <object class="wxButton" name="ID_CLOSE">
-      <label>关闭</label>
-      <pos>320, 83</pos>
-      <size>80, -1</size>
-    </object>
-    <object class="wxCheckBox" name="ID_MATCHCASE">
-      <label>匹配大小写</label>
-      <pos>10, 66</pos>
-    </object>
-    <object class="wxCheckBox" name="ID_WHOLEWORD">
-      <label>整个单词</label>
-      <pos>10, 88</pos>
-    </object>
-    <object class="wxRadioBox" name="ID_DIRECTION">
-      <label>方向</label>
-      <content>
-        <item>向前</item>
-        <item>向后</item>
-      </content>
-      <pos>100,61</pos>
-      <style>wxRA_SPECIFY_ROWS</style>
-    </object>
-    <object class="wxCheckBox" name="ID_REGEX">
-      <label>正则表达式</label>
-      <pos>10, 110</pos>
-    </object>
-    <object class="wxCheckBox" name="ID_REWIND">
-      <label>当到达文件末尾时从文件头重新开始</label>
-      <checked>1</checked>
-      <pos>150, 110</pos>
-    </object>
-    <object class="wxStaticText">
-      <label>查找：</label>
-      <pos>10,10</pos>
-    </object>
-    <object class="wxStaticText">
-      <label>替换：</label>
-      <pos>10,33</pos>
-    </object>
-    <object class="wxRadioBox" name="ID_SECTION">
-      <label>替换范围</label>
-      <content>
-        <item>整个文件</item>
-        <item>选中区域</item>
-      </content>
-      <pos>10, 128</pos>
-      <style>wxRA_SPECIFY_ROWS</style>
-    </object>
-  </object>
-  <object class="wxDialog" name="FindDialog">
-    <title>查找...</title>
-    <centered>1</centered>
-    <size>410,142</size>
-    <style>wxDEFAULT_DIALOG_STYLE</style>
-    <object class="wxComboBox" name="ID_FINDTEXT">
-      <content/>
-      <pos>80,8</pos>
-      <size>200,-1</size>
-    </object>
-    <object class="wxButton" name="ID_FIND">
-      <label>查找</label>
-      <default>1</default>
-      <pos>320, 7</pos>
-      <size>80, 22</size>
-    </object>
-    <object class="wxButton" name="ID_CLOSE">
-      <label>关闭</label>
-      <pos>320, 37</pos>
-      <size>80, 22</size>
-    </object>
-    <object class="wxCheckBox" name="ID_MATCHCASE">
-      <label>匹配大小写</label>
-      <pos>10, 40</pos>
-    </object>
-    <object class="wxCheckBox" name="ID_WHOLEWORD">
-      <label>整个单词</label>
-      <pos>10, 60</pos>
-    </object>
-    <object class="wxRadioBox" name="ID_DIRECTION">
-      <label>方向</label>
-      <content>
-        <item>向前</item>
-        <item>向后</item>
-      </content>
-      <pos>100, 30</pos>
-      <style>wxRA_SPECIFY_ROWS</style>
-    </object>
-    <object class="wxCheckBox" name="ID_REGEX">
-      <label>正则表达式</label>
-      <pos>10, 80</pos>
-    </object>
-    <object class="wxCheckBox" name="ID_REWIND">
-      <label>当到达文件末尾时从文件头重新开始</label>
-      <checked>1</checked>
-      <pos>150, 80</pos>
-    </object>
-    <object class="wxStaticText">
-      <label>查找：</label>
-      <pos>10,10</pos>
-    </object>
-  </object>
-</resource>
